SERVER-13769 QueryPlanner::plan() has to clear tags from query tree